src/test/deca/codegen/invalid/resultats/var3-ima.res
  ** IMA ** ERREUR ** Ligne 45 : 
    WFLOAT avec R1 indefini
